--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </header>
 
       <main class="main-content">
-        <form>
+        <form action="https://formspree.io/f/xlddgqyg" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required />
